# personIdentifier

./: CMakeLists.txt  Funcionario_uml.txt  funcionario.cpp  funcionario.h  funcionarios.txt  identifier.c++  identifier.cpp  main.cpp  mainwindow.cpp  mainwindow.h
output/: funcionarios.txt
